// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> Tests should render correctly with props 1`] = `
.c0 {
  box-shadow: 0 0 5px #999;
}

<section
  class="c0"
>
  <div>
    children
  </div>
</section>
`;

exports[`<Anchor /> Tests should render correctly without props 1`] = `
.c0 {
  box-shadow: 0 0 5px #999;
}

<section
  class="c0"
/>
`;
